Использован Prettier, так как проект не проходит тесты

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         <span class="button__text">Сохранить на память</span>
       </button>
       <dialog class="popup" id="dialog-id">
-        <form form class="popup__form" method="dialog">
+        <form class="popup__form" method="dialog">
           <div class="popup__content">
             <svg class="popup__icon" viewBox="0 0 21 21">
               <use href="./svg/floppy.svg#floppy-id" class="floppy"></use>
